changes to html and database

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,11 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<h1>Website Coming Soon</h1>
+
+		<h3>SalaryChecker.com</h3>
+		
+		<p>Hydra-Rising is creating a responsive website that allows people to anonymously input their salary or wage details and in return gives them access to other people's income data.</p>
 
 <%= yield %>
 
