--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,6 +6,10 @@
 <div>
 <body>
 <h1>Website Coming Soon</h1>
+<form method="GET" action="/locations">
+	<input type="text" name="zipcode">
+	<input type="submit" value="Enter">
+</form>
 <h3>SalaryChecker.com</h3>
 <p>Hydra-Rising is creating a responsive website that allows people to anonymously input their salary or wage details and in return gives them access to other people's income data.</p>
 </body>
